<resources>
    <string name="app_name">Weather App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="loc_deatils">Measured: %s</string>
    <string name="sunrise">Sunrise</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="windspeed">Wind Speed</string>
</resources>
